.github/workflows/ci-downstream-mingw.yml: Only run on branches '*downstream-mingw*'

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -5,8 +5,7 @@ on:
     - cron: '28 5 * * 1'
   push:
     branches:
-      - '*windows*'
-      - '*mingw*'
+      - '*downstream-mingw*'
   workflow_dispatch:
     inputs:
       sage-doctest-options:
