--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -37,6 +37,9 @@ on:
       oss:
         type: string
         required: false
+      sage-doctest-options:
+        type: string
+        required: false
 
 jobs:
 
