.github/workflows/ci-wheels.yml: Use PYTHONUTF8=1

--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -237,3 +237,4 @@ jobs:
         shell: bash
         env:
           SAGE_DOCTEST_OPTIONS: ${{ inputs.sage-doctest-options}}
+          PYTHONUTF8: 1
