.github/workflows/mingw.yml: Also install 'python'

--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -70,6 +70,7 @@ jobs:
             mingw-w64-${{ matrix.env }}-gcc
             ${{ !contains(matrix.env, 'clang') && format('mingw-w64-{0}-gcc-fortran', matrix.env) || '' }}
             autotools
+            python
             mingw-w64-${{ matrix.env }}-python
             mingw-w64-${{ matrix.env }}-python-pip
             mingw-w64-${{ matrix.env }}-python-setuptools
