.github/workflows/ci-mingw.yml (-sitepackages): Add numpy, cysignals

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -130,6 +130,8 @@ jobs:
         tdlib
         setuptools
         cython
+        cysignals
+        numpy
       targets: >-
         sagemath_bliss
         sagemath_categories
