--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -91,6 +91,8 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'tdlib')      && format('mingw-w64-{0}-treedec',           matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cython')     && format('mingw-w64-{0}-cython',            matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'setuptools') && format('mingw-w64-{0}-python-setuptools', matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'cysignals')  && format('mingw-w64-{0}-python-cysignals',  matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'numpy')      && format('mingw-w64-{0}-python-numpy',      matrix.env) || '' }}
           msystem: ${{ matrix.msystem }}
 
       - name: Download upstream artifact
