--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -63,6 +63,7 @@ setenv =                     {[pkgenv]setenv}
                              KNOWN_TEST_FAILURES={toxinidir}/known-test-failures.json
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
+                             PYTHONUTF8=1
 
     # Work around tox's problematic handling of # in commands
                              SHARP=\#
