--- a/pkgs/sagemath-graphs/tox.ini
+++ b/pkgs/sagemath-graphs/tox.ini
@@ -68,6 +68,7 @@ setenv =                     {[pkgenv]setenv}
                              KNOWN_TEST_FAILURES={toxinidir}/known-test-failures{env:_MODULES:}{env:_PARI}{env:_POLYHEDRA:}.json
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
+                             PYTHONUTF8=1
 
 allowlist_externals =
     bash
