--- a/pkgs/sagemath-pari/tox.ini
+++ b/pkgs/sagemath-pari/tox.ini
@@ -59,6 +59,7 @@ setenv =                     {[pkgenv]setenv}
                              KNOWN_TEST_FAILURES={toxinidir}/known-test-failures.json
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
+                             PYTHONUTF8=1
 
 allowlist_externals =
     bash
