--- a/pkgs/sagemath-schemes/tox.ini
+++ b/pkgs/sagemath-schemes/tox.ini
@@ -66,6 +66,7 @@ setenv =                     {[pkgenv]setenv}
                              KNOWN_TEST_FAILURES={toxinidir}/known-test-failures{env:_NTL}{env:_PARI}.json
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
+                             PYTHONUTF8=1
 
 allowlist_externals =
     bash
