--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -83,6 +83,7 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'cddlib')     && format('mingw-w64-{0}-cddlib',            matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cliquer')    && format('mingw-w64-{0}-cliquer',           matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cmr')        && format('mingw-w64-{0}-cmr',               matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'gsl')        && format('mingw-w64-{0}-gsl',               matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libhomfly')  && format('mingw-w64-{0}-libhomfly',         matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'nauty')      && format('mingw-w64-{0}-nauty',             matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'ntl')        && format('mingw-w64-{0}-ntl',               matrix.env) || '' }}
