.github/workflows/ci-mingw.yml: Add meson, meson_python

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -134,6 +134,7 @@ jobs:
         tdlib
         cysignals
         cython
+        meson_python
         numpy
         setuptools
       targets: >-
