.github/workflows/mingw.yml: Add tox

--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -74,6 +74,7 @@ jobs:
             mingw-w64-${{ matrix.env }}-python
             mingw-w64-${{ matrix.env }}-python-pip
             mingw-w64-${{ matrix.env }}-python-setuptools
+            mingw-w64-${{ matrix.env }}-python-tox
             patch
             mingw-w64-${{ matrix.env }}-cmake
             mingw-w64-${{ matrix.env }}-ninja
