--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -134,8 +134,11 @@ jobs:
         tdlib
         cysignals
         cython
+        matplotlib
         meson_python
         numpy
+        pillow
+        scipy
         setuptools
       targets: >-
         sagemath_bliss
