--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -88,6 +88,7 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'gsl')          && format('mingw-w64-{0}-gsl',               matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libhomfly')    && format('mingw-w64-{0}-libhomfly',         matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'm4ri')         && format('mingw-w64-{0}-m4ri',              matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'mpfi')         && format('mingw-w64-{0}-mpfi',              matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'nauty')        && format('mingw-w64-{0}-nauty',             matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'ntl')          && format('mingw-w64-{0}-ntl',               matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'planarity')    && format('mingw-w64-{0}-planarity',         matrix.env) || '' }}
