--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -68,6 +68,7 @@ jobs:
         cmr
         flex
         freetype
+        glpk
         gsl
         libhomfly
         m4ri
@@ -129,6 +130,7 @@ jobs:
         cmr
         flex
         freetype
+        glpk
         gsl
         libhomfly
         m4ri
