--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -81,6 +81,7 @@ jobs:
             mingw-w64-${{ matrix.env }}-gtest
             ${{ contains(inputs.extra_sage_packages, 'flex')             && 'flex' || '' }}
             ${{ contains(inputs.extra_sage_packages, 'bliss')            && format('mingw-w64-{0}-bliss',                    matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'bzip2')            && format('mingw-w64-{0}-bzip2',                    matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cddlib')           && format('mingw-w64-{0}-cddlib',                   matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cliquer')          && format('mingw-w64-{0}-cliquer',                  matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cmr')              && format('mingw-w64-{0}-cmr',                      matrix.env) || '' }}
@@ -88,6 +89,7 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'glpk')             && format('mingw-w64-{0}-glpk',                     matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'gsl')              && format('mingw-w64-{0}-gsl',                      matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libhomfly')        && format('mingw-w64-{0}-libhomfly',                matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'libpng')           && format('mingw-w64-{0}-libpng',                   matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'm4ri')             && format('mingw-w64-{0}-m4ri',                     matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'mpfi')             && format('mingw-w64-{0}-mpfi',                     matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'nauty')            && format('mingw-w64-{0}-nauty',                    matrix.env) || '' }}
@@ -97,6 +99,7 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'rankwidth')        && format('mingw-w64-{0}-rankwidth',                matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'symmetrica')       && format('mingw-w64-{0}-symmetrica',               matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'tdlib')            && format('mingw-w64-{0}-treedec',                  matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'zlib')             && format('mingw-w64-{0}-zlib',                     matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'calver')           && format('mingw-w64-{0}-python-calver',            matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cysignals')        && format('mingw-w64-{0}-python-cysignals',         matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'cython')           && format('mingw-w64-{0}-cython',                   matrix.env) || '' }}
