.github/workflows/ci-mingw.yml (-standard): Add libjpeg

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -74,6 +74,7 @@ jobs:
         glpk
         gsl
         libhomfly
+        libjpeg
         libpng
         m4ri
         mpfi
@@ -141,6 +142,7 @@ jobs:
         glpk
         gsl
         libhomfly
+        libjpeg
         libpng
         m4ri
         mpfi
