--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -70,6 +70,7 @@ jobs:
         cliquer
         cmr
         flex
+        flint
         freetype
         glpk
         gsl
@@ -138,6 +139,7 @@ jobs:
         cliquer
         cmr
         flex
+        flint
         freetype
         glpk
         gsl
