.github/workflows/ci-mingw.yml (-standard): Install info

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -79,6 +79,7 @@ jobs:
         freetype
         glpk
         gsl
+        info
         libhomfly
         libjpeg
         libpng
@@ -155,6 +156,7 @@ jobs:
         freetype
         glpk
         gsl
+        info
         libhomfly
         libjpeg
         libpng
