--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -89,6 +89,7 @@ jobs:
             ${{ contains(inputs.extra_sage_packages, 'freetype')          && format('mingw-w64-{0}-freetype',                 matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'glpk')              && format('mingw-w64-{0}-glpk',                     matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'gsl')               && format('mingw-w64-{0}-gsl',                      matrix.env) || '' }}
+            ${{ contains(inputs.extra_sage_packages, 'info')              && format('mingw-w64-{0}-texinfo',                  matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libhomfly')         && format('mingw-w64-{0}-libhomfly',                matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libjpeg')           && format('mingw-w64-{0}-libjpeg-turbo',            matrix.env) || '' }}
             ${{ contains(inputs.extra_sage_packages, 'libpng')            && format('mingw-w64-{0}-libpng',                   matrix.env) || '' }}
