.github/workflows/mingw.yml: Fix uploading of sage-local artifact

--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -229,4 +229,4 @@ jobs:
         if:   always() && inputs.logs_artifact
         with:
           name: mingw-sage-local-${{ matrix.os }}${{ inputs.logs_artifact_suffix }}
-          path: ./local
+          path: ./sage-local
