.github/workflows/ci-mingw.yml (-standard): Install sirocco

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -85,6 +85,7 @@ jobs:
         planarity
         qhull
         rankwidth
+        sirocco
         symmetrica
         tdlib
         zlib
@@ -156,6 +157,7 @@ jobs:
         planarity
         qhull
         rankwidth
+        sirocco
         symmetrica
         tdlib
         zlib
