--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -1015,6 +1015,12 @@ jobs:
         run: |
           ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_polyhedra
 
+      - name: sagemath-m4ri-m4rie
+        id:   sagemath-m4ri-m4rie
+        if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_m4ri_m4rie
+
       - name: sagemath-ntl
         id:   sagemath-ntl
         if:   (success() || failure()) && steps.sagemath-modules.outcome == 'success'
